/*
 * $Id: ChangeLog,v 1.5820 2007/12/21 15:22:27 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-12-21 19:08 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hbapifs.h
  * include/hbcomp.h
  * include/hberrors.h
  * include/hbpp.h
  * source/common/hbfsapi.c
  * source/compiler/hbgenerr.c
  * source/compiler/ppcomp.c
  * source/pp/ppcore.c
  * source/pp/pplib.c
  * source/rtl/filesys.c
  * utils/hbpp/hbpp.c
  * utils/hbpp/hbppcore.c
  * utils/hbpp/hbppdef.h
    * char * -> const char * changes, borrowed from Harbour.

2007-12-21 18:21 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * make_xmingw.sh
    ! Updated MinGW cross-compiler detection in recent Gentoo Linux releases.

2007-12-21 15:11 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hashapi.h
  * include/hbapi.h
  * include/hbapidbg.h
  * include/hbapierr.h
  * include/hbapifs.h
  * include/hbapigt.h
  * include/hbapilng.h
  * include/hbcomprs.h
  * include/hbdate.h
  * include/hbfast.h
  * include/hbmath.h
  * include/hbregex.h
  * include/hbserv.h
  * include/hbset.h
  * include/hbstack.h
  * include/hbvm.h
  * include/hbvmpub.h
  * include/thread.h
    * HB_EXPORT usage standardization, formatting.

2007-12-21 13:42 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * include/hbapifs.h
  * source/common/hbfsapi.c
    ! Some compiler/PP memory leaks fixed (borrowed from Harbour).

2007-12-19 11:10 UTC-0300 Luiz Rafael Culik Guimaraes <luiz at xharbour.com.br>
  ! source/rtl/filesys.c
    source/rtl/fssize.c
    source/hbffind.c
    ! sync with harbour to allow usage of files >=4gb  on hpux and linux
  ! include/hbapifs.h
    ! minor function header correction

2007-12-19 15:10 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/vm/itemapi.c
    * Formatting (tabs changed to spaces).
